# allium

./: .gitignore  .gitlab-ci-image-upload.sh  .gitlab-ci.yml  CMakeLists.txt  README.md  _formulas.tex  annotated.html  annotated_dup.js  apple__tree_8hpp_source.html  assert_8hpp_source.html  cg_8hpp_source.html  cg_8impl_8hpp_source.html  classAppleTree-members.html  classAppleTree.html  classAppleTree.js  classallium_1_1CgSolver-members.html  classallium_1_1CgSolver.html  classallium_1_1CgSolver.js  classallium_1_1CgSolverBase-members.html  classallium_1_1CgSolverBase.html  classallium_1_1CgSolverBase.js  classallium_1_1CgSolver__coll__graph.md5  classallium_1_1CgSolver__inherit__graph.map  classallium_1_1Cloneable-members.html  classallium_1_1Cloneable.html  classallium_1_1Cloneable.js  classallium_1_1Cloneable__inherit__graph.map  classallium_1_1Cloneable__inherit__graph.md5  classallium_1_1Comm-members.html  classallium_1_1Comm.html  classallium_1_1Comm.js  classallium_1_1EigenSparseMatrixStorage-members.html  classallium_1_1EigenSparseMatrixStorage.html  classallium_1_1EigenSparseMatrixStorage.js  classallium_1_1EigenSparseMatrixStorage__coll__graph.map  classallium_1_1EigenSparseMatrixStorage__coll__graph.md5  classallium_1_1EigenVectorStorage-members.html  classallium_1_1EigenVectorStorage.html  classallium_1_1EigenVectorStorage.js  classallium_1_1EigenVectorStorage__inherit__graph.map  (+391 more)
.github/workflows/: publish-gh-pages.yml  update-gh-pages.yml
allium/: CMakeLists.txt  config.hpp.in
allium/ipc/: CMakeLists.txt  comm.cpp  comm.hpp  init.cpp  init.hpp
allium/la/: CMakeLists.txt  cg.cpp  cg.hpp  cg.impl.hpp  cuda_array.hpp  cuda_util.cu  cuda_util.hpp  cuda_vector.cu  cuda_vector.hpp  default.hpp  eigen_sparse_matrix.hpp  eigen_vector.cpp  eigen_vector.hpp  eigen_vector.impl.hpp  gmres.cpp  gmres.hpp  gmres.impl.hpp  iterative_solver.hpp  linear_operator.hpp  linear_solver.hpp  local_coo_matrix.hpp  local_matrix.hpp  local_vector.cpp  local_vector.hpp  petsc_abstract_vector.hpp  petsc_object_ptr.hpp  petsc_sparse_matrix.cpp  petsc_sparse_matrix.hpp  petsc_util.cpp  petsc_util.hpp  petsc_vector.cpp  petsc_vector.hpp  sparse_matrix.cpp  sparse_matrix.hpp  sparse_matrix.impl.hpp  txt_io.cpp  txt_io.hpp  vector.cpp  vector.hpp  vector.impl.hpp  (+6 more)
allium/main/: CMakeLists.txt  init.cpp  init.hpp
allium/mesh/: CMakeLists.txt  cuda_mesh.cu  cuda_mesh.hpp  cuda_mesh_algorithm.hpp  cuda_narray.cu  cuda_narray.hpp  local_mesh.hpp  petsc_mesh.cpp  petsc_mesh.hpp  petsc_mesh.impl.hpp  petsc_mesh_spec.cpp  petsc_mesh_spec.hpp  point.hpp  range.hpp  regular_mesh.hpp  vtk_io.cpp  vtk_io.hpp
allium/ode/: CMakeLists.txt  explicit_euler.hpp  explicit_integrator.hpp  imex_euler.cpp  imex_euler.hpp  imex_euler.impl.hpp  imex_integrator.hpp  integrator.hpp  linear_imex_integrator.hpp  runge_kutta_4.hpp
allium/util/: CMakeLists.txt  assert.hpp  cloneable.cpp  cloneable.hpp  cloning_ptr.hpp  crtp.hpp  except.hpp  extern.hpp  hash.cpp  hash.hpp  memory.hpp  numeric.hpp  polynomial.hpp  preprocess.hpp  types.hpp  warnings.hpp
chive/: CMakeLists.txt  config.hpp.in
chive/ipc/: CMakeLists.txt  comm.cpp  comm.hpp  init.cpp  init.hpp
chive/la/: CMakeLists.txt  cg.cpp  cg.hpp  cg.impl.hpp  eigen_sparse_matrix.hpp  eigen_vector.cpp  eigen_vector.hpp  eigen_vector.impl.hpp  gmres.cpp  gmres.hpp  gmres.impl.hpp  local_coo_matrix.hpp  local_vector.hpp  petsc_object_ptr.hpp  petsc_sparse_matrix.cpp  petsc_sparse_matrix.hpp  petsc_util.hpp  petsc_vector.cpp  petsc_vector.hpp  sparse_matrix.cpp  sparse_matrix.hpp  sparse_matrix.impl.hpp  vector.cpp  vector.hpp  vector.impl.hpp  vector_spec.cpp  vector_spec.hpp
chive/main/: CMakeLists.txt  init.cpp  init.hpp
chive/mpi/: CMakeLists.txt  comm.cpp  comm.hpp  init.cpp  init.hpp  util.cpp
chive/util/: extern.hpp  types.hpp
contrib/: CMakeLists.txt
demo/: CMakeLists.txt  fisher2.cpp  heat_periodic2.cpp  io.cpp  phase_field2.cpp  poisson.cpp  poisson2.cpp  poisson2_cuda.cpp
doc/: CMakeLists.txt  Doxyfile.in  demos.md  developer.md  docker.md  download.md  index.md  install.md  kubuntu_dev_setup.md  style_guide.md
doc/api/: CMakeLists.txt  Doxyfile.in  index.md  install.md
doc/style_example/: CMakeLists.txt  apple_tree.cpp  apple_tree.hpp  main.cpp
docker/: container-init.sh  container-tests.sh  full_dev.dockerfile  minimal_dev.dockerfile
docker/scripts/: build.sh  start.sh  sudo.sh
python/: CMakeLists.txt
python/allium/: CMakeLists.txt  native.cpp
python/chive/: CMakeLists.txt  __init__.py  __init__py  native.cpp
scripts/: deb-install-dependencies.sh  debug.sh  docker-build.sh  docker-run-tests.sh  docker-start.sh  docker-vars.sh  install-dependencies.sh  install-minimal-dependencies.sh  install-petsc.sh  publish-gh-pages.sh  publish-images.sh  stub.py
scripts/docker/: container-init.sh  container-tests.sh  full_dev.dockerfile  minimal_dev.dockerfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+18 more)
tests/: CMakeLists.txt  cg.cpp  cuda.cu  eigen.cpp  explicit_integrator.cpp  gmres.cpp  hash.cpp  imex_euler.cpp  local_matrix.cpp  local_mesh.cpp  local_vector.cpp  main.cpp  numeric.cpp  petsc.cpp  petsc_mesh.cpp  point.cpp  polynomial.cpp  range.cpp  sparse_matrix.cpp  vector.cpp  vector_storage.cpp
